--- a/todo_style.css
+++ b/todo_style.css
@@ -16,7 +16,6 @@ h1 {
 
 label {
 	display: block;
-	
 }
 
 input {
@@ -29,6 +28,7 @@ input {
 #add_btn, #add_btn:focus {
 	background-color: darkgreen;
 	color: white;
+	margin-top: 15px; 
 	font-size: 20px;
 	border: 1px solid black;
 	border-radius: 5px;
