--- a/todo_style.css
+++ b/todo_style.css
@@ -36,8 +36,8 @@ input {
 
 li {
 	text-align: left;
-	font-size: 12px;
-	margin-bottom: 8px;
+	font-size: 15px;
+	margin-bottom: 15px;
 }
 
 #checkbox {
@@ -59,7 +59,7 @@ li {
 	color: black;
 	font-size: 15px;
 	position: absolute;
-	right: 12%;
+	right: 18%;
 	border: 1px solid black;
 	border-radius: 5px;
 }
@@ -89,6 +89,19 @@ hr {
 	color: black;
 	font-size: 0.7em;
 	font-weight: bold;
+}
+
+@media screen and (min-width: 1200px) {
+  	#completed_btn {
+		right: 15%;
+	}
+	#remove_btn {
+		right: 10%;
+	}
+	li {
+		margin-left: 5%;
+		font-size: 18px;
+	}
 }
 
 
