--- a/todo_style.css
+++ b/todo_style.css
@@ -3,10 +3,11 @@
 
 body {
 	color: black;
-	background-color: lightgreen;
+	background-color: #dfbac9;
+	margin-top: 10%;
 	padding: 0px;
 	text-align: center;
-	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, "sans-serif";
+	font-family: monospace;
 	letter-spacing: 1px;
 }
 
@@ -14,24 +15,23 @@ h1 {
 	font-weight: bold;
 }
 
-label {
-	display: block;
-}
-
 input {
 	padding: 5px;
 	font-size: 20px;
-	border: 1px solid black;
+	border: none;
 	border-radius: 5px;
 }
 
 #add_btn, #add_btn:focus {
-	background-color: darkgreen;
-	color: white;
-	margin-top: 10px; 
+	background-color: lightgreen;
+	color: black; 
 	font-size: 20px;
-	border: 1px solid black;
+	border: none;
 	border-radius: 5px;
+}
+
+ul {
+	margin-top: 7%;
 }
 
 li {
@@ -45,50 +45,29 @@ li {
 	right: 35%;
 }
 
-#all_complete_btn {
-	background-color: darkgreen;
-	color: white;
-	font-size: 20px;
-	border: 1px solid black;
-	border-radius: 5px;
-	margin-bottom: 10px;
-}
-
 #completed_btn {
-	background-color: lightblue;
+	background-color: white;
 	color: black;
 	font-size: 15px;
 	position: absolute;
 	right: 18%;
-	border: 1px solid black;
+	border: none;
 	border-radius: 5px;
 }
 
 #remove_btn {
-	background-color: red;
-	color: white;
+	background-color: #ff8f8f;
+	color: black;
 	font-size: 15px;
 	position: absolute;
 	right: 5%;
-	border: 1px solid black;
+	border: none;
 	border-radius: 5px;
 }
 
 .done {
 	text-decoration: line-through;
-}
-
-hr {
-	border-top: 2px solid black;
-}
-
-.footer {
-	margin-bottom: 0px;
-	padding-bottom: 10px;
-	text-align: center;
-	color: black;
-	font-size: 0.7em;
-	font-weight: bold;
+	color: grey;
 }
 
 @media screen and (min-width: 1200px) {
